add прохождение tests
минимальный функционал с мгновенным показом правильности

--- a/WebTests/ClientApp/src/app/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests.component.html
@@ -27,7 +27,7 @@
     <li *ngFor="let option of currentQuestion.options">
       <label>
         <input type="radio" name="answer" [value]="option"
-               (change)="selectedAnswers(currentQuestion.id, option)" />
+               (change)="selectedAnswers(currentQuestion.id, option, title)" />
         {{ option }}
       </label>
     </li>
