add buttons next and prev question
кнопки перехода по вопросам

--- a/WebTests/ClientApp/src/app/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests.component.html
@@ -16,5 +16,12 @@
     </li>
   </ul>
 
-  <button (click)="nextQuestion()">Следующий вопрос</button>
+  <div *ngIf="!isFirst">
+    <button (click)="lastQuestion()">Предыдущий вопрос</button>
+  </div>
+
+  <div *ngIf="!isLast">
+    <button (click)="nextQuestion()">Следующий вопрос</button>
+  </div>
+  
 </div>
