add check existing test on frontend

--- a/WebTests/ClientApp/src/app/management/management.component.html
+++ b/WebTests/ClientApp/src/app/management/management.component.html
@@ -1,7 +1,7 @@
 <h2>Управление тестами</h2>
 
 <div class="d-grid gap-1 col-3">
-  <button class="btn btn-success mt-1">Создать</button>
+  <button class="btn btn-success mt-1" routerLink="/management/create">Создать</button>
   <button class="btn btn-outline-success mt-1">Редактировать</button>
 </div>
 
