change project structure

--- a/WebTests/ClientApp/src/app/management/management-create/management-create.component.html
+++ b/WebTests/ClientApp/src/app/management/management-create/management-create.component.html
@@ -1,5 +1,5 @@
 <h2>Создание теста</h2>
-<p>Пока здесь создается проверка на существование теста по названию</p>
+<p>Пока здесь проверка на существование теста по названию</p>
 <br />
 
 <input type="text" name="test-title" [(ngModel)]="test_title" placeholder="Название теста" />
