--- a/WebTests/ClientApp/src/app/management/management.component.html
+++ b/WebTests/ClientApp/src/app/management/management.component.html
@@ -2,6 +2,5 @@
 
 <div class="d-grid gap-1 col-3">
   <button class="btn btn-success mt-1" routerLink="/management/create">Создать</button>
-  <button class="btn btn-outline-success mt-1">Редактировать</button>
+  <button class="btn btn-outline-success mt-1" routerLink="/management/edit">Редактировать</button>
 </div>
-
