--- a/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Он-лайн тесты</a>
+      <a class="navbar-brand" [routerLink]="['/']">Web-тесты</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,11 +20,6 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <!--<li class="nav-item"
-              [routerLinkActive]="['link-active']"
-              [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Главная</a>
-          </li>-->
           <li class="nav-item"
               [routerLinkActive]="['link-active']"
               [routerLinkActiveOptions]="{ exact: true }">
