--- a/WebTests/ClientApp/src/app/management/management-edit/management-edit-list/management-edit-list.component.html
+++ b/WebTests/ClientApp/src/app/management/management-edit/management-edit-list/management-edit-list.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="tests;else no_tests">
   <ul>
-    <li *ngFor="let test of tests"><h4><a [routerLink]="['management/edit', test.title]">{{ test.title }}</a></h4></li>
+    <li *ngFor="let test of tests"><h4><a [routerLink]="['/management/edit', test.title]">{{ test.title }}</a></h4></li>
   </ul>
 </div>
 
