--- a/WebTests/ClientApp/src/app/tests/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests/tests.component.html
@@ -2,13 +2,13 @@
   <h3>{{ currentQuestion.text }}</h3>
 
   <!--<ul>-->
-    <p *ngFor="let option of currentQuestion.options">
-      <label>
-        <input class="form-check-input" type="radio" name="answer" [value]="option"
-               (change)="selectedAnswers(currentQuestion.id, option, title)" />
-        {{ option.text }}
-      </label>
-    </p>
+  <p *ngFor="let option of currentQuestion.options">
+    <label>
+      <input class="form-check-input" type="radio" name="answer" [value]="option"
+             (change)="selectedAnswers(currentQuestion.id, option, title)" />
+      {{ option.text }}
+    </label>
+  </p>
   <!--</ul>-->
 
   <div *ngIf="!isFirst">
@@ -23,9 +23,18 @@
     <br />
     <button class="btn btn-dark" (click)="finishTest()">Завершить тест</button>
   </div>
-  
+
 </div>
 
 <ng-template #no_questions>
   <h3>В данном тесте нет вопросов</h3>
 </ng-template>
+
+<div class="modal fade" [class.show]="isModalOpen" [style.display]="isModalOpen ? 'block' : 'none'">
+  <div class="modal-dialog">
+    <div class="modal-content p-3">
+      <p>{{ textModal }}</p>
+      <button type="button" (click)="closeModal()">Ок</button>
+    </div>
+  </div>
+</div>
