add adding tests from frontend

--- a/WebTests/ClientApp/src/app/management/management-create/management-create.component.html
+++ b/WebTests/ClientApp/src/app/management/management-create/management-create.component.html
@@ -2,23 +2,50 @@
 <br />
 
 <input type="text" name="test-title" [(ngModel)]="test_title" placeholder="Название теста" />
-<button type="submit" (click)="btnClick()">Добавить</button>
 
-<div *ngIf="is_exist">  
-  <p>Такой тест уже существует</p>
+<div *ngIf="test_empty">
+  <p>Пустое поле названия</p>
 </div>
 
-<div *ngIf="confirm_add">
-  <p>Подтвердите добавление теста {{ test_title_adding }}</p>
+<div *ngIf="is_exist">
+  <p>Название такого теста уже существует</p>
+</div>
 
-  <!--<input type="text" name="question_1" value="" [(ngModel)]="test_question_1" placeholder="Вопрос 1"/>
+<p>{{ text_error }}</p>
+
+
+<div *ngFor="let question of test.questions; let i = index">
+  <h3>Вопрос {{ i + 1 }}</h3>
+  <input type="text" placeholder="Текст вопроса" [(ngModel)]="question.text" />
+
   <ul>
-    <li><input type="radio" name="question_1_option_1_iscorrect" [(ngModel)]="question_1_option_1_iscorrect"><input type="text" name="question_1_option_1" value="" [(ngModel)]="test_question_1_option_1" placeholder="Вариант 1" /></li>
-    <li><input type="radio" name="question_1_option_2_iscorrect" [(ngModel)]="question_1_option_2_iscorrect"><input type="text" name="question_1_option_2" value="" [(ngModel)]="test_question_1_option_2" placeholder="Вариант 2" /></li>
-    <li><input type="radio" name="question_1_option_3_iscorrect" [(ngModel)]="question_1_option_3_iscorrect"><input type="text" name="question_1_option_3" value="" [(ngModel)]="test_question_1_option_3" placeholder="Вариант 3" /></li>
-  </ul>-->
+    <li *ngFor="let option of question.options; let j = index">
+      <input type="radio"
+             [name]="'correct_' + i"
+             [checked]="option.isCorrect"
+             (change)="selectCorrectOption(question, j)"/>
+      <input type="text" placeholder="Вариант {{ j + 1 }}" [(ngModel)]="option.text" />
+      <button type="button" (click)="removeOption(question, j)">Удалить</button>
+    </li>
+  </ul>
 
-  <button (click)="btnConfirm()">Подтвердить</button>
+  <button type="button" (click)="addOption(question)">Добавить вариант</button>
+  <button type="button" (click)="removeQuestion(i)">Удалить вопрос</button>
+  <br />
+</div>
+
+<br />
+<button type="button" (click)="addQuestion()">Добавить вопрос</button>
+
+<br />
+<div *ngIf="test.questions.length > 2 and test_title != ''">
+  <button type="button" (click)="btnAdd()">Добавить тест</button>
+</div>
+
+
+<div *ngIf="confirm_add">
+  <p>Подтвердите добавление теста {{ test_title }}</p>
+  <button type="button" (click)="btnConfirm()">Подтвердить</button>
 </div>
 
 <div *ngIf="success_add">
