--- a/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
+++ b/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
@@ -1,40 +1,69 @@
-<h2>Редактирование {{ test.title }}</h2>
+<h2>Редактирование {{ test_title }}</h2>
 
 <p>{{ text_error }}</p>
 
 <label>Название: </label>
-<input type="text" name="test-title" [(ngModel)]="test.title" placeholder="Название теста" />
+<input
+       type="text"
+       name="test-title"
+       [(ngModel)]="edited_test.title"
+       [readonly]="is_editing_locked"
+       placeholder="Название теста" />
 
-<div *ngFor="let question of test.questions; let i = index">
+<div *ngFor="let question of edited_test.questions; let i = index">
   <h3>Вопрос {{ i + 1 }}</h3>
-  <input type="text" placeholder="Текст вопроса" [(ngModel)]="question.text" />
+  <input
+         type="text"
+         [(ngModel)]="question.text"
+         [readonly]="is_editing_locked"
+         placeholder="Текст вопроса" />
 
   <ul>
     <li *ngFor="let option of question.options; let j = index">
       <input type="radio"
              [name]="'correct_' + i"
              [checked]="option.isCorrect"
-             (change)="selectCorrectOption(question, j)"
-             />
-             
-      <input type="text" placeholder="Вариант {{ j + 1 }}" [(ngModel)]="option.text" />
-      <button type="button" (click)="removeOption(question, j)">Удалить</button>
+             (change)="selectCorrectOption(question, j)" />
+
+      <input
+             type="text"
+             [(ngModel)]="option.text"
+             [readonly]="is_editing_locked"
+             placeholder="Вариант {{ j + 1 }}" />
+      <button type="button" [disabled]="is_editing_locked" (click)="removeOption(question, j)">Удалить</button>
     </li>
   </ul>
 
-  <button type="button" (click)="addOption(question)">Добавить вариант</button>
-  <button type="button" (click)="removeQuestion(i)">Удалить вопрос</button>
+  <button type="button" [disabled]="is_editing_locked" (click)="addOption(question)">Добавить вариант</button>
+  <button type="button" [disabled]="is_editing_locked" (click)="removeQuestion(i)">Удалить вопрос</button>
   <br />
 </div>
 
 <br />
-<button type="button" (click)="addQuestion()">Добавить вопрос</button>
+<button type="button" [disabled]="is_editing_locked" (click)="addQuestion()">Добавить вопрос</button>
 
 <br />
-<div *ngIf="test.questions.length > 2 and test.title != ''">
-  <button type="button" (click)="btnSaveChanges()">Редактировать</button>
+<div *ngIf="edited_test.questions.length > 2 && edited_test.title != ''"> 
+  <button type="button" [disabled]="is_editing_locked" (click)="btnSaveChanges()">Редактировать</button>
+</div>
+
+<div *ngIf="confirm_edit">
+  <br />
+  <p>Изменения: </p>
+  <ul>
+    <li *ngFor="let change of changes; let k = index">
+      <p>{{ change }}</p>
+    </li>
+  </ul>
+
+  <button type="button" (click)="btnConfirm()">Подтвердить редактирование</button>
+  <button type="button" (click)="btnCancel()">Отменить</button>
 </div>
 
 <ng-template #no_question>
   <p>В данном тесте нет вопросов</p>
 </ng-template>
+
+<div *ngIf="success_edit">
+  <p>Тест успешно изменен!</p>
+</div>
