--- a/WebTests/ClientApp/src/app/tests/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests/tests.component.html
@@ -1,19 +1,17 @@
 <div *ngIf="currentQuestion;else no_questions">
   <h3>{{ currentQuestion.text }}</h3>
 
-  <!--<ul>-->
   <p *ngFor="let option of currentQuestion.options">
     <label>
       <input class="form-check-input"
-             type="radio"
-             name="answer"
-             [value]="option"
-             [disabled]="isLocked"
-             (change)="selectedAnswers(currentQuestion.id, option, test.title)" />
+              type="radio"
+              name="answer"
+              [value]="option"
+              [disabled]="isLocked"
+              (change)="selectedAnswers(currentQuestion.id, option, test.title)" />
       {{ option.text }}
     </label>
   </p>
-  <!--</ul>-->
 
   <!--<div *ngIf="!isFirst">
     <button class="btn btn-danger" (click)="lastQuestion()">Предыдущий вопрос</button>
@@ -22,13 +20,17 @@
   <div *ngIf="!isLast">
     <button class="btn btn-outline-primary"
             (click)="nextQuestion()"
-            [disabled]="isLocked === false">Далее</button>
+            [disabled]="isLocked === false">
+      Далее
+    </button>
   </div>
 
   <div *ngIf="isLast">
     <br />
     <button class="btn btn-dark"
-            (click)="finishTest()">Завершить тест</button>
+            (click)="finishTest()">
+      Завершить тест
+    </button>
   </div>
 
 </div>
@@ -42,6 +44,15 @@
     <div class="modal-content p-3">
       <p>{{ textModal }}</p>
       <button type="button" (click)="closeModal()">Ок</button>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" [class.show]="isFinishModalOpen" [style.display]="isFinishModalOpen ? 'block' : 'none'">
+  <div class="modal-dialog">
+    <div class="modal-content p-3">
+      <p>{{ textModal }}</p>
+      <button type="button" (click)="closeFinishModal()">Ок</button>
     </div>
   </div>
 </div>
