--- a/WebTests/ClientApp/src/app/profile/profile.component.html
+++ b/WebTests/ClientApp/src/app/profile/profile.component.html
@@ -1,2 +1,4 @@
 <p>profile {{ username }} works!</p>
 <button *ngIf="authService.isAuthenticated" (click)="onLogout()">Выйти</button>
+
+<a [routerLink]="['/my-tests']">Ваши тесты</a>
