--- a/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,7 +23,9 @@
           <li class="nav-item"
               [routerLinkActive]="['link-active']"
               [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['management']">Управление</a>
+            <div *ngIf="authService.isAuthenticated">
+              <a class="nav-link text-dark" [routerLink]="['management']">Управление</a>
+            </div>
           </li>
           <li class="nav-item"
               [routerLinkActive]="['link-active']"
